# portfolio-dev

./: .gitignore  DECISIONS.md  INICIAR-TUDO.bat  Portfolio - Resumo dos Projetos.docx  README.md
ai-dungeon-master/: EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
ai-dungeon-master/src/dungeon/: __init__.py  character.py  engine.py  game.py  llm.py  scenarios.py  store.py
ai-dungeon-master/static/: style.css
ai-dungeon-master/templates/: base.html  play.html  start.html
ai-dungeon-master/tests/: test_engine.py  test_game.py  test_llm.py
albion-profit-engine/: README.md
churn-predictor/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
churn-predictor/src/churn/: __init__.py  data.py  model.py  service.py
churn-predictor/static/: style.css
churn-predictor/templates/: base.html  cockpit.html  simular.html
churn-predictor/tests/: test_data.py  test_model.py  test_service.py
doc-intelligence/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
doc-intelligence/src/docintel/: __init__.py  analyze.py  extract.py  llm.py  sample.py  service.py
doc-intelligence/static/: style.css
doc-intelligence/templates/: base.html  index.html
doc-intelligence/tests/: test_analyze.py  test_extract.py  test_service.py
festpro-suite/: EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
festpro-suite/.streamlit/: config.toml
festpro-suite/src/festpro/: __init__.py  data.py  kpis.py
festpro-suite/tests/: test_data.py  test_kpis.py
finance-dashboard/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
finance-dashboard/.streamlit/: config.toml
finance-dashboard/sample_data/: extrato_exemplo.csv
finance-dashboard/src/findash/: __init__.py  sample.py
finance-dashboard/src/findash/analysis/: __init__.py  metrics.py
finance-dashboard/src/findash/categorize/: __init__.py  classifier.py  rules.py
finance-dashboard/src/findash/core/: __init__.py  categories.py  models.py
finance-dashboard/src/findash/ingest/: __init__.py  csv_parser.py  ofx_parser.py
finance-dashboard/src/findash/utils/: __init__.py  formatting.py
finance-dashboard/tests/: test_categorize.py  test_csv_parser.py  test_metrics.py  test_ofx_parser.py
gestao-entregas/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
gestao-entregas/src/gentregas/: __init__.py  core.py  holidays.py  sample.py  store.py
gestao-entregas/static/: style.css
gestao-entregas/templates/: base.html  form.html  lista.html
gestao-entregas/tests/: test_core.py  test_holidays.py  test_store.py
invest-portfolio-analyzer/: EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
invest-portfolio-analyzer/.streamlit/: config.toml
invest-portfolio-analyzer/src/invest/: __init__.py  data.py  portfolio.py
invest-portfolio-analyzer/tests/: test_data.py  test_portfolio.py
logistics-control/: .gitignore  EXECUTAR.bat  MERCADO.md  README.md  app.py  pyproject.toml  requirements.txt
logistics-control/.streamlit/: config.toml
logistics-control/src/logistics/: __init__.py  core.py  fleet.py  geo.py  routing.py  sample.py
logistics-control/tests/: test_fleet.py  test_geo.py  test_routing.py
ml-model-api-template/: .dockerignore  .gitignore  Dockerfile  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
ml-model-api-template/src/mlapi/: __init__.py  api.py  model.py  schema.py  train.py
ml-model-api-template/tests/: test_api.py  test_train.py
mtg-card-vision/: README.md
mtg-deck-lab/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
mtg-deck-lab/src/mtglab/: __init__.py  analysis.py  decklist.py  gamechangers.py  ligamagic.py  scryfall.py  storage.py
mtg-deck-lab/static/: camera.js  style.css
mtg-deck-lab/templates/: base.html  camera.html  deck.html  decks.html  index.html
mtg-deck-lab/tests/: test_analysis.py  test_decklist.py
nfe-invoice-extractor/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
nfe-invoice-extractor/src/nfe/: __init__.py  parser.py  sample.py
nfe-invoice-extractor/static/: style.css
nfe-invoice-extractor/templates/: base.html  index.html  nota.html
nfe-invoice-extractor/tests/: test_parser.py
presence-keeper/: .gitignore  INICIAR.bat  README.md  presence_keeper.py
rag-knowledge-assistant/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
rag-knowledge-assistant/src/rag/: __init__.py  corpus.py  llm.py  retriever.py  service.py
rag-knowledge-assistant/static/: style.css
rag-knowledge-assistant/templates/: base.html  index.html
rag-knowledge-assistant/tests/: test_llm.py  test_retriever.py  test_service.py
rpg-character-forge/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
rpg-character-forge/src/rpgforge/: __init__.py  data.py  generator.py  sheet.py  store.py
rpg-character-forge/static/: style.css
rpg-character-forge/templates/: base.html  ficha.html  index.html  personagens.html
rpg-character-forge/tests/: test_generator.py  test_sheet.py
sales-bi-autoinsights/: EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
sales-bi-autoinsights/src/salesbi/: __init__.py  data.py  insights.py
sales-bi-autoinsights/static/: style.css
sales-bi-autoinsights/templates/: base.html  dashboard.html
sales-bi-autoinsights/tests/: test_data.py  test_insights.py
text-to-sql-analyst/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
text-to-sql-analyst/static/: style.css
text-to-sql-analyst/templates/: base.html  index.html
text-to-sql-analyst/tests/: test_database.py  test_nl2sql.py  test_service.py
tibia-market-radar/: README.md
worldcup-predictor/: .gitignore  EXECUTAR.bat  README.md  app.py  pyproject.toml  requirements.txt
worldcup-predictor/.streamlit/: config.toml
worldcup-predictor/tests/: test_data.py  test_models.py  test_sim.py
(+12 files in other folders)
