[project]
name = "doc-intelligence"
version = "1.0.0"
description = "Read a document (text/CSV/PDF/Excel), extract stats and summarize (Groq/Claude/offline)."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
