[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Personal finance dashboard: import statements, auto-categorize with ML, visualize."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.33",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
