[project]
name = "logistics-control"
version = "0.1.0"
description = "Delivery routing & fleet planning (sweep + nearest-neighbour + 2-opt, time windows)."
requires-python = ">=3.12"
dependencies = ["streamlit>=1.33", "pandas>=2.2", "plotly>=5.20"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
