[project]
name = "mtg-deck-lab"
version = "1.0.0"
description = "Commander deck analyzer (brackets, curve, prices) + camera card lookup — Flask."
requires-python = ">=3.12"
dependencies = ["Flask>=3.0", "requests>=2.31", "beautifulsoup4>=4.12", "Pillow>=10.2"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
