[project]
name = "rag-knowledge-assistant"
version = "1.0.0"
description = "Ask a company knowledge base (RAG): TF-IDF retrieval + Groq/Claude/offline."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
