[project]
name = "rpg-character-forge"
version = "1.0.0"
description = "Forge D&D 5e character sheets (and other systems) — Flask, printable."
requires-python = ">=3.12"
dependencies = ["Flask>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
